@@ -132,34 +132,10 @@ namespace triagens {
         uint64_t determineChunkSize () const;
 
 ////////////////////////////////////////////////////////////////////////////////
-/// @brief remotely start the replication logger
-////////////////////////////////////////////////////////////////////////////////
-
-        void handleCommandLoggerStart ();
-
-////////////////////////////////////////////////////////////////////////////////
-/// @brief remotely stop the replication logger
-////////////////////////////////////////////////////////////////////////////////
-
-        void handleCommandLoggerStop ();
-
-////////////////////////////////////////////////////////////////////////////////
 /// @brief return the state of the replication logger
 ////////////////////////////////////////////////////////////////////////////////
 
         void handleCommandLoggerState ();
-
-////////////////////////////////////////////////////////////////////////////////
-/// @brief return the configuration of the the replication logger
-////////////////////////////////////////////////////////////////////////////////
-
-        void handleCommandLoggerGetConfig ();
-
-////////////////////////////////////////////////////////////////////////////////
-/// @brief configure the replication logger
-////////////////////////////////////////////////////////////////////////////////
-
-        void handleCommandLoggerSetConfig ();
 
 ////////////////////////////////////////////////////////////////////////////////
 /// @brief handle a follow command for the replication log
